--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li>Crear ramas</li>
         <li>Hacer merge</li>
         <li>Subir cambios a GitHub</li>
+	<li>Crea una pull request</li>
     </ul>
 </body>
 </html>
